# django-sensible

./: LICENSE  README.md  pyproject.toml
django_sensible/: README.md  admin.py
django_sensible/drf/: README.md  filters.py  pagination.py  routers.py  viewsets.py
tests/: test_django_sensible.py
