[tool.poetry]
name = "django_sensible"
version = "0.1.0"
description = ""
authors = [
    "Romain Gonçalves <commit@rgoncalves.se>",
    "VIPERdev <info@viper.dev>"
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
